Implementação de logica de validação supllier
