# src/provider/Validator.ts
@@ -6,6 +6,19 @@ interface IValidatorParams {
   senha: string;
   telefone: string;
 }
+interface IValidatorParamsSupllier{
+  nomeDaEmpresa: string;
+  email: string;
+  senha: string;
+  contato: string;
+}
+
+interface IValidatorParamsEndereco{
+  rua:string;
+  cidade:string;
+  estado:string;
+  cep:string;
+}
 
 class Validator {
   static validarUsuario(usuario: IValidatorParams) {
@@ -18,14 +31,25 @@ class Validator {
     return schema.validate(usuario);
   }
 	
-	static validarSupllier(usuario: IValidatorParams) {
+	static validarSupllier(supplier: IValidatorParamsSupllier) {
     const schema = Joi.object({
-      nome: Joi.string().min(2).max(30).required(),
+      nomeDaEmpresa: Joi.string().min(2).max(30).required(),
       email: Joi.string().email().max(100).required(),
 			senha: Joi.string().min(6).max(50).required(),
-			telefone: Joi.string().pattern(/^\d{11}$/).required(),
+			contato: Joi.string().pattern(/^\d{11}$/).required(),
     });
-    return schema.validate(usuario);
+    return schema.validate(supplier);
+  }
+  
+  static validarEndereco(endereco: IValidatorParamsEndereco) {
+    const schema = Joi.object({
+      rua: Joi.string().min(2).max(30).required(),
+      cidade: Joi.string().min(2).max(30).required(),
+      estado: Joi.string().min(2).max(2).required(),
+      cep: Joi.string().min(8).max(30).required(),
+      })
+
+    return schema.validate(endereco);
   }
 
 
